--- a/Popularity_corner/main/static/base.css
+++ b/Popularity_corner/main/static/base.css
@@ -19,7 +19,7 @@
 
 
 header {
-    background-image: url('../static/media/nav-layer.svg');
+    background-image: url('../static/media/navbar_layer_2.svg');
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100% auto;
@@ -34,12 +34,10 @@ body {
 ###############################################################*/
 
 .navbar {
-    position: relative;
-    z-index: 1; 
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -94,12 +92,13 @@ body {
 }
 
 .navbar > ul > li > .button:hover {
-    background-color: var(--secondary-color);
+    color: var(--fourthiary-color);
+    background-color: var(--white-color);
     transition: 0.2s ease-in-out;
 }
 
 
 .space {
     width: 100%;
-    height: 300px;
+    height: 200px;
 }
