refactor: adding javascript events

--- a/app/main/templates/homepage.html
+++ b/app/main/templates/homepage.html
@@ -3,7 +3,7 @@
 <a href={% url "login" %}>Log in</a>
 <a href={% url "register_user" %}>Register</a>
 
-<h3>Welcome to :</h3><h2>Popularity corner</h2>
+<h3>Bienvenue :</h3><h2>Popularity corner</h2>
 
 <p>See your </p><a href={% url 'estimations' %}>estimations</a>
 
