--- a/app/main/templates/public/register.html
+++ b/app/main/templates/public/register.html
@@ -1,7 +1,7 @@
 {% block body %}
     <br/><br/>
     {% if form.errors %}
-    <p> There was an error, verify your Username / Password </p>
+    <p> L'identifiant et le mot de passe sont incorrects. </p>
     {% endif %}
     <br/>
     <h2> Register </h2>
