--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -23,6 +23,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'javascript/navbar.js' %}"></script>
 
     <script>
       {% for message in messages %}
