--- a/app/main/templates/public/includes/navbar.html
+++ b/app/main/templates/public/includes/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar">         
-    <a href="navbar.html" class="logo">
+    <a href="{% url 'home' %}" class="logo">
         <img src="{% static 'media/popularity_corner.png' %}" alt="Popularity Corner Logo" height="120" width="200">
     </a>
     <ul>
@@ -10,7 +10,7 @@
         <li><a href="#" class="tabs">Contact</a></li>
     </ul>
     <ul>
-        <li><a href="#" class="button">Inscription</a></li>
-        <li><a href="#" class="button">Connexion</a></li>
+        <li><a href="{% url 'register' %}" class="button">Inscription</a></li>
+        <li><a href="{% url 'login' %}" class="button">Connexion</a></li>
     </ul>
 </nav>
