--- a/app/main/templates/public/register.html
+++ b/app/main/templates/public/register.html
@@ -6,7 +6,7 @@
     <br/>
     <h2> Register </h2>
     <br/>
-    <form action="{% url 'register_user' %}" method="POST">
+    <form action="{% url 'register' %}" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value ='submit' class="btn btn-secondary">
