--- a/app/main/templates/public/home.html
+++ b/app/main/templates/public/home.html
@@ -8,3 +8,12 @@
 {% block header %}
     {% include './includes/navbar.html' %}
 {% endblock header %}
+
+
+{% block body %}
+{% endblock body %}
+
+
+{% block footer %}
+    {% include './includes/footer.html' %}
+{% endblock footer %}
