--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -14,12 +14,18 @@
 
     <header>
         {% block header %}{% endblock header %}
-        <div class="space"></div>
+        <div class="space-2"></div>
     </header>
 
     <main>
         {% block body %}{% endblock body %}
+        <div class="space-1"></div>
     </main>
+
+
+    <footer>
+        {% block footer %}{% endblock footer %}
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
