--- a/app/main/templates/private/estimations.html
+++ b/app/main/templates/private/estimations.html
@@ -1,18 +1,15 @@
 {% block body %}
+{% load mathfilters %}
 
 <p> Connecté : {{user.username}}</p>
 <ul>
     {% for movie in movies %}
     <li>
         <p>{{movie.title}}, Date : {{movie.release_date}}</p>
-        <p>Estimations : {{movie.prediction}}</p>
+        <p>Estimations au niveau national: {{movie.prediction}}</p>
+        <p>Estimations au niveau du cinéma: {{movie.prediction_cinema}}</p>
         <p>{{movie.genres}}</p>
-        <p>{{movie.director}}</p>
-        <p>{{movie.cast}}</p>
-        <p>{{movie.duration}}</p>
-        <p>{{movie.views}}</p>
-        <p>{{movie.nationality}}</p>
-        <p>{{movie.distributor}}</p>
+        <img src={{movie.image_url}} alt={{movie.title}}>
 
     </li>
     {% endfor %}
