refactor: backend - clarify views and migrations

--- a/app/main/templates/public/login.html
+++ b/app/main/templates/public/login.html
@@ -4,14 +4,14 @@
         <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter username">
+                        <label for="username">Nom d'utilisateur</label>
+                        <input type="text" class="form-control" name="username" aria-describedby="emailHelp" placeholder="Nom d'utilisateur">
                 </div>
                 <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" name="password" placeholder="Password">
+                        <label for="exampleInputPassword1">Mot de passe</label>
+                        <input type="password" class="form-control" name="password" placeholder="Mot de passe">
                 </div>
-                      <button type="submit" class="btn btn-primary">Log in</button>
+                      <button type="submit" class="btn ">Connexion</button>
         </form>
         <br/><br/><br/><br/>
 
